nori-rs/tui/src/nori/snapshots/nori_tui__nori__session_config_history__tests__history_cells_highlight_values_not_names.snap
---
source: tui/src/nori/session_config_history.rs
expression: "spans_to_style_snapshot(&lines[0].spans)"
---
"• " Style::new().dim()
"Claude Code option set: " Style::new()
"Model" Style::new()
"=" Style::new()
"Opus 4.6" Style::new().cyan().bold()
